[package]
name = "map-invertor-mqtt-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["derive", "env"] }
clap_complete = "4.2.1"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"
rumqttc = { version = "0.21.0", features = ["url", "websocket"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.39"
