[package]
name = "map-invertor-mqtt-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["derive", "env"] }
clap-duration = "0.1.11"
clap_complete = "4.2.1"
duration-human = "0.1.10"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.15"
rumqttc = { version = "0.21.0", features = ["url", "websocket"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serialport = "4.2.1"
snafu = { version = "0.7.5", features = ["backtraces", "backtraces-impl-std"] }
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
