[package]
name = "map-invertor-mqtt-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.1.8", features = ["derive", "env"] }
clap-duration = "0.1.11"
clap_complete = "4.2.1"
duration-human = "0.1.10"
enum-primitive-derive = "0.2.2"
paho-mqtt = "0.12"
num-traits = "0.2.15"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serialport = "4.2.1"
snafu = { version = "0.7.5", features = ["backtraces", "backtraces-impl-std"] }
thiserror = "1.0.39"
log = "0.4.21"
env_logger = "0.11.3"
